monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0276/A0276a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0276;

component grammar A0276a {

  external A;

}